--- a/js-nodes/index.html
+++ b/js-nodes/index.html
@@ -4,13 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nodes</title>
 </head>
-<body>
+<body onload="myLoadFunction()">
+
     <section class="first-section">
         
     </section>
-    <section class="first-section">
-        not empty
+
+    <section class="second-section">
+        <!-- removed later  -->
     </section>
-    <script src="nodes.js"></script>
+
+    <script defer src="nodes.js"></script>
 </body>
 </html>
