Try out styling using js

--- a/js-nodes/index.html
+++ b/js-nodes/index.html
@@ -3,6 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nodes</title>
+    <style>
+    .highlight {
+        color: white;
+        background-color: black;
+        padding: 10px;
+        width: 250px;
+        text-align: center;
+    }
+    </style>
 </head>
 <body onload="myLoadFunction()">
 
