Place heading, input, and controls

--- a/js-todo-list/todolist.html
+++ b/js-todo-list/todolist.html
@@ -6,6 +6,10 @@
   <title>Another To-Do List</title>
 </head>
 <body>
-  
+  <h1>To-Do List Application</h1>
+  <div>
+    <input type="text" placeholder="Your Task">
+    <button type="button" id="addButton">Add Task</button>
+  </div>
 </body>
 </html>
