Add id attribute to input

--- a/js-todo-list/todolist.html
+++ b/js-todo-list/todolist.html
@@ -8,7 +8,7 @@
 <body>
   <h1>To-Do List Application</h1>
   <div>
-    <input type="text" placeholder="Your Task">
+    <input type="text" id="taskInput" placeholder="Your Task">
     <button type="button" id="addButton">Add Task</button>
   </div>
 
