Link script in doc

--- a/js-todo-list/todolist.html
+++ b/js-todo-list/todolist.html
@@ -15,5 +15,7 @@
   <ul id="taskList">
     <!-- TASKS GET PLACED HERE -->
   </ul>
+
+  <script src="todolist.js" defer></script>
 </body>
 </html>
